# demo_repository

./: .gitignore  pyproject.toml  requirements.txt
anyio/: async_requests.py  async_tests.py
httpx/: get_json.py  post_json.py  tests.py
pydantic/: .env_test  custom_validator.py  data_validation.py  env_validation_script.py  export_to_flat_format.py  export_to_json.py  read_from_json.py  validator_with_annotated.py
pytest/: test_my_output.py  test_with_exclusion.py  test_with_parameters.py
pytest-django/: pyproject.toml  tests.py
pytest-django/learning/: settings.py
pytest-django/testapp/: tests.py
unittest_mock/: test_random.py
