[tool.poetry]
name = "demo_repository"
version = "1.0.0"
description = "project to prepare for an internship"
authors = ["Alex <aleksey.tolchin2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
pydantic = "2.10.2"
pydantic-settings = "2.6.1"
httpx = "0.28.0"
anyio = "4.5.2"

[tool.poetry.dev-dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
pytest = "8.3.3"
pytest-httpx = "0.35.0"
trio = "0.28.0"
pytest-mock = "3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
