[tool.poetry]
name = "demo_repository_django"
version = "1.0.0"
description = "project to prepare for an internship"
authors = ["Alex <aleksey.tolchin2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
django = "^5.1.3"

[tool.poetry.dev-dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
pytest = "8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "learning.settings"
testpaths = ["./testapp/"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

